--- a/index.html
+++ b/index.html
@@ -1,257 +1,154 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Town of Shadows</title>
-<style>
-  :root{--bg:#080808;--card:#0f0f12;--accent:#ffd166;--muted:#9aa0a6}
-  body{margin:0;font-family:Inter,system-ui,Arial;background:var(--bg);color:#eee;display:flex;flex-direction:column;align-items:center;padding:12px}
-  h1{color:var(--accent);margin:8px 0}
-  .card{background:var(--card);padding:12px;border-radius:10px;width:100%;max-width:920px;border:1px solid #222;margin-bottom:12px}
-  .controls{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
-  input,select,button{padding:8px;border-radius:8px;border:1px solid #2b2b2b;background:#0c0c0e;color:#fff}
-  button{background:var(--accent);color:#000;border:none;font-weight:700}
-  #grid{display:grid;grid-template-columns:repeat(5,1fr);gap:8px;margin-top:12px}
-  .player{background:#131316;padding:8px;border-radius:8px;text-align:center;min-height:80px;display:flex;flex-direction:column;justify-content:center}
-  .dead{opacity:0.45}
-  #chat{height:240px;overflow:auto;background:#0b0b0d;border-radius:8px;padding:8px;border:1px solid #222}
-  #timerBar{height:8px;background:#222;border-radius:6px;margin-top:8px;overflow:hidden}
-  #timerFill{height:100%;width:0%;background:linear-gradient(90deg,#2ecc71,#f6c700)}
-  .small{font-size:13px;color:var(--muted)}
-  .controls-row{display:flex;gap:8px;align-items:center;margin-top:8px}
-  #nightActions{display:none;margin-top:8px}
-  #factionBadge{font-weight:700}
-  @media(max-width:600px){#grid{grid-template-columns:repeat(4,1fr)}}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Town of Shadows</title>
+  <style>
+    body {
+      background-color: #0c0c0c;
+      color: #e0e0e0;
+      font-family: "Poppins", sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    #game {
+      max-width: 900px;
+      margin: auto;
+      padding: 10px;
+    }
+    #playerGrid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 6px;
+      margin-top: 15px;
+    }
+    .player {
+      background-color: #222;
+      border-radius: 8px;
+      padding: 8px;
+      font-size: 13px;
+    }
+    .dead { opacity: 0.4; }
+    #chatBox {
+      background: #111;
+      height: 180px;
+      overflow-y: auto;
+      padding: 5px;
+      border: 1px solid #333;
+      margin: 10px auto;
+      width: 95%;
+      text-align: left;
+      font-size: 13px;
+    }
+    #controls {
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+      margin-top: 10px;
+    }
+    button {
+      background: #333;
+      color: #eee;
+      border: none;
+      border-radius: 5px;
+      padding: 8px 12px;
+      cursor: pointer;
+    }
+    #tutorialPopup, #rulesPopup {
+      display: none;
+      position: fixed;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #151515;
+      border: 2px solid #666;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 480px;
+      height: 70%;
+      overflow-y: auto;
+      z-index: 1000;
+      color: #f0f0f0;
+      padding: 15px;
+      text-align: left;
+    }
+    .closeBtn {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      cursor: pointer;
+      color: #ff7070;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h1>Town of Shadows</h1>
+  <div id="game">
+    <h1>🏙️ Town of Shadows</h1>
 
-  <div class="card">
-    <div id="roleBox" class="small">
-      <div id="connection">Not connected</div>
-      <div id="roomInfo">No room</div>
-      <div id="roleDisplay">Role: —</div>
-      <div id="factionDisplay" class="small">Faction: —</div>
+    <div id="connect">
+      <input id="roomId" placeholder="Room ID" />
+      <input id="playerName" placeholder="Your Name" />
+      <button onclick="createRoom()">Create Room</button>
+      <button onclick="joinRoom()">Join Room</button>
     </div>
 
-    <div class="controls">
-      <input id="nameInput" placeholder="Your name" value="joiboi">
-      <input id="roomInput" placeholder="Room ID (leave blank to create)">
-      <button id="createJoinBtn">Create / Join</button>
-      <button id="startBtn">Start Game</button>
-      <div class="small" id="phase">Waiting...</div>
-    </div>
+    <div id="gameplay" style="display:none;">
+      <h3 id="statusText"></h3>
+      <div id="phaseText"></div>
+      <div id="playerGrid"></div>
 
-    <div id="timerBar"><div id="timerFill"></div></div>
-    <div id="accusedDisplay" class="small" style="color:#ffb3b3;margin-top:8px">No accused</div>
+      <div id="controls">
+        <button onclick="startGame()">Start Game</button>
+        <button onclick="showRules()">Rules</button>
+      </div>
+
+      <div id="chatBox"></div>
+      <input id="chatInput" placeholder="Type message..." onkeydown="if(event.key==='Enter')sendChat();" />
+      <button onclick="sendChat()">Send</button>
+    </div>
   </div>
 
-  <div class="card">
-    <div id="grid"></div>
+  <!-- Tutorial popup -->
+  <div id="tutorialPopup">
+    <div class="closeBtn" onclick="closeTutorial()">✖</div>
+    <h3>Welcome to Town of Shadows!</h3>
+    <p>This is a strategic social deduction game between the Town, Mafia, and Cult factions. 
+    At night, players use their skills (heal, kill, protect, convert, etc). 
+    During the day, everyone discusses and votes to eliminate suspects.</p>
+    <p>Use logic and teamwork to uncover the truth. 
+    If you’re Mafia or Cult, coordinate secretly to take over the town.</p>
+    <p><b>Good luck!</b></p>
+    <button onclick="closeTutorial()">Got it!</button>
   </div>
 
-  <div class="card">
-    <div id="chat"></div>
-    <div class="controls-row">
-      <input id="chatInput" placeholder="Type a message..." style="flex:1">
-      <select id="chatChannel">
-        <option value="public">Public</option>
-        <option value="mafia">Mafia (private)</option>
-        <option value="cult">Cult (private)</option>
-        <option value="dead">Dead chat</option>
-      </select>
-      <button id="sendBtn">Send</button>
-    </div>
-
-    <div id="nightActions" class="small">
-      <div><strong>Night action</strong></div>
-      <select id="targetSelect"></select>
-      <button id="confirmActionBtn">Confirm Action</button>
-    </div>
-
+  <!-- Rules popup -->
+  <div id="rulesPopup">
+    <div class="closeBtn" onclick="closeRules()">✖</div>
+    <h2>📜 Game Rules & Roles</h2>
+    <p><b>Objective:</b> Each faction wins by eliminating all others.</p>
+    <ul>
+      <li><b>Town:</b> Find and eliminate all Mafia. Cult doesn’t stop your win.</li>
+      <li><b>Mafia:</b> Eliminate the Town. You win if only Mafia remain or equal Cult count.</li>
+      <li><b>Cult:</b> Recruit others to your side until you dominate the town.</li>
+      <li><b>Doctor:</b> Heal one target each night (can self-heal). Prevents death except from Beastman.</li>
+      <li><b>Vigilante:</b> May shoot Mafia; fails if shooting non-Mafia.</li>
+      <li><b>Spy:</b> Can contact Mafia or learn a target’s role if non-Mafia.</li>
+      <li><b>Fanatic:</b> Becomes linked to Cult after contact; visible only after that.</li>
+      <li><b>Beastman:</b> Contacts to awaken; their attacks ignore Doctor/Bodyguard protection.</li>
+    </ul>
+    <p>Day/Night Cycle:</p>
+    <ul>
+      <li>Night 1 starts immediately.</li>
+      <li>Night = 40s for skills and faction chat.</li>
+      <li>Day discussion = 60s, then 20s voting, 10s defence, 10s verdict.</li>
+    </ul>
+    <p>Use chat to accuse, discuss, and vote (type player number to vote).</p>
+    <p>Click "Got it!" on tutorial to start playing.</p>
   </div>
 
-<script type="module">
-import * as wsClient from './wsClient.js';
-
-// UI refs
-const connEl = document.getElementById("connection");
-const roomInfoEl = document.getElementById("roomInfo");
-const roleDisplay = document.getElementById("roleDisplay");
-const factionDisplay = document.getElementById("factionDisplay");
-const grid = document.getElementById("grid");
-const chatBox = document.getElementById("chat");
-const phaseEl = document.getElementById("phase");
-const timerFill = document.getElementById("timerFill");
-const accusedEl = document.getElementById("accusedDisplay");
-const nightActions = document.getElementById("nightActions");
-const targetSelect = document.getElementById("targetSelect");
-
-let currentRoom = null;
-let mySlot = null;
-let myName = null;
-let myRole = null;
-let myFaction = null;
-let timerInterval = null;
-let currentRoomState = null;
-
-document.getElementById("createJoinBtn").onclick = async () => {
-  try {
-    const name = document.getElementById("nameInput").value || "joiboi";
-    const rid = document.getElementById("roomInput").value.trim() || "";
-    const res = await wsClient.createAndJoin(rid, name);
-    currentRoom = res.roomId; mySlot = res.slot; myName = name;
-    roomInfoEl.innerText = `Room: ${currentRoom} • Slot: ${mySlot}`;
-    connEl.innerText = "Joined (connecting...)";
-    wsClient.setExternalHandler(onMsg);
-  } catch (e) {
-    alert("Join error: "+ (e.message || e));
-  }
-};
-
-document.getElementById("startBtn").onclick = async () => {
-  if (!currentRoom) return alert("Join a room first");
-  try {
-    const r = await wsClient.startGame(currentRoom);
-    console.log("start result", r);
-  } catch(e) {
-    alert("Start failed: "+(e.message||e));
-  }
-};
-
-document.getElementById("sendBtn").onclick = () => {
-  const txt = document.getElementById("chatInput");
-  const ch = document.getElementById("chatChannel").value;
-  if (!txt.value.trim()) return;
-  wsClient.sendChat(txt.value.trim(), ch);
-  txt.value = "";
-};
-
-document.getElementById("confirmActionBtn").onclick = () => {
-  const t = targetSelect.value;
-  if (!t) return alert("Select a target");
-  const typeMap = {
-    "Mafia": "mafia_kill",
-    "Cult": "cult_convert",
-    "Doctor": "doctor_heal",
-    "Bodyguard": "bodyguard_protect",
-    "Vigilante": "vigilante_shot",
-    "Jailor": "jail",
-    "Janitor": "janitor_clean",
-    "Serial Killer": "serial_kill",
-    "Arsonist": "douse"
-  };
-  let actionType = typeMap[myRole] || "generic_action";
-  wsClient.sendAction({actor: myName, target: t, type: actionType, actor_role: myRole});
-  nightActions.style.display = "none";
-};
-
-function onMsg(msg) {
-  console.log("MSG", msg);
-  if (msg.type === "system") {
-    appendChat("System", msg.text || "");
-    if (msg.text && msg.text.toLowerCase().includes("connected to")) {
-      connEl.innerText = "Connected";
-    }
-    if (msg.text && msg.text.toLowerCase().includes("game started")) {
-      // nothing extra
-    }
-    return;
-  }
-  if (msg.type === "private_role") {
-    myRole = msg.role; myFaction = msg.faction;
-    roleDisplay.innerText = `Role: ${myRole}`;
-    factionDisplay.innerText = `Faction: ${myFaction}`;
-    alert(`Your role: ${myRole} — ${myFaction}`);
-    return;
-  }
-  if (msg.type === "phase") {
-    phaseEl.innerText = `${msg.phase}`;
-    startTimer(msg.seconds || 0);
-    const lower = (msg.phase||"").toLowerCase();
-    if (lower.includes("night") && myRole) {
-      const actionable = ["Doctor","Bodyguard","Vigilante","Jailor","Janitor","Serial Killer","Cult Leader","Mafioso","Godfather","Beastman"];
-      if (actionable.includes(myRole)) {
-        populateTargetsForAction();
-        nightActions.style.display = "block";
-      } else {
-        nightActions.style.display = "none";
-      }
-    } else {
-      nightActions.style.display = "none";
-    }
-    return;
-  }
-  if (msg.type === "room") {
-    currentRoomState = msg.room;
-    renderGrid(msg.room.players || []);
-    return;
-  }
-  if (msg.type === "chat") {
-    appendChat(msg.from || "Anon", msg.text, msg.channel || "public");
-    return;
-  }
-  if (msg.type === "accused_update") {
-    accusedEl.innerText = msg.accused ? `Accused: ${msg.accused}` : "No accused";
-    return;
-  }
-  if (msg.type === "verdict_phase") {
-    alert(`Verdict time for ${msg.accused}`);
-    return;
-  }
-  if (msg.type === "private") {
-    appendChat("Private", msg.text);
-    return;
-  }
-}
-
-function renderGrid(players) {
-  grid.innerHTML = "";
-  players.sort((a,b)=> a.slot - b.slot);
-  players.forEach(p => {
-    const el = document.createElement("div");
-    el.className = "player" + (p.alive ? "" : " dead");
-    el.innerHTML = `<div style="font-weight:700">${p.name}</div><div class="small">Slot ${p.slot}</div><div class="small">${p.alive? "Alive":"Dead"}</div>`;
-    grid.appendChild(el);
-  });
-}
-
-function appendChat(from, text, channel="public") {
-  const d = document.createElement("div");
-  const time = new Date().toLocaleTimeString();
-  d.textContent = `[${time}] ${from}${channel!=="public" ? "("+channel+")":""}: ${text}`;
-  chatBox.appendChild(d);
-  chatBox.scrollTop = chatBox.scrollHeight;
-}
-
-function populateTargetsForAction() {
-  targetSelect.innerHTML = "";
-  if (!currentRoomState) return;
-  const alive = currentRoomState.players.filter(p => p.alive);
-  alive.forEach(p => {
-    const opt = document.createElement("option");
-    opt.value = p.name;
-    opt.textContent = `${p.name} ${p.name===myName ? "(you)" : ""}`;
-    targetSelect.appendChild(opt);
-  });
-}
-
-function startTimer(seconds) {
-  if (timerInterval) clearInterval(timerInterval);
-  if (!seconds || seconds<=0) { timerFill.style.width="0%"; return; }
-  let remaining = seconds;
-  timerFill.style.width = "100%";
-  timerInterval = setInterval(()=> {
-    remaining--;
-    const pct = Math.max(0, (remaining/seconds) * 100);
-    timerFill.style.width = pct + "%";
-    if (remaining<=0) clearInterval(timerInterval);
-  }, 1000);
-}
-
-wsClient.setExternalHandler(onMsg);
-</script>
+  <script src="wsClient.js"></script>
 </body>
-        </html>
+</html>
